# api-football-cli

./: .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.codex/environments/: environment.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
api-football-cli/api_football_cli/: __init__.py  main.py
api-football-cli/api_football_cli/application/ports/: commentary_model.py  event_bus.py  football_api.py
api-football-cli/api_football_cli/application/services/: ingest_events.py
api-football-cli/api_football_cli/domain/: director.py  events.py
api_football_cli/: config.py  main.py
api_football_cli/adapters/inbound/cli/: app.py
api_football_cli/application/ports/: football_api.py  repositories.py
api_football_cli/application/services/: generate_commentary.py  ingest_events.py  stream_commentary.py  sync_reference.py
api_football_cli/domain/: entities.py  personas.py  transcript.py
docs/: development.md  usage.md
examples/: replay-demo.json
frontend/: app.js  index.html  styles.css
run/: setup.sh
tests/: conftest.py  factories.py  fakes.py  test_apifootball_fake.py  test_apifootball_http.py  test_cli.py  test_commentary_service.py  test_composition.py  test_config.py  test_domain_director.py  test_domain_events.py  test_domain_personas.py  test_domain_transcript.py  test_ingest_service.py  test_main_sync.py  test_messaging.py  test_model_anthropic.py  test_model_fake.py  test_persistence.py  test_pipeline.py  test_stream_service.py  test_sync_service.py  test_web.py
(+17 files in other folders)
