[project]
name = "api-football-cli"
version = "0.1.0"
description = "Live AI football commentators: api-football ingestion, Postgres LISTEN/NOTIFY spine, two-voice commentary, FastAPI SSE"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.16.0",
    "anthropic>=0.69.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic>=2.13.4",
    "sqlalchemy[asyncio]>=2.0.44",
    "typer>=0.26.7",
    "uvicorn>=0.34.0",
]

[project.scripts]
afc = "api_football_cli.adapters.inbound.cli.app:main"

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.14.0",
    "ty>=0.0.49",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The python package lives in ./api-football-cli/ (project rule); the importable
# package inside it is api_football_cli. Hatchling strips the leading directory.
[tool.hatch.build.targets.wheel]
packages = ["api-football-cli/api_football_cli"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.report]
fail_under = 90
show_missing = true
